fix(report layout) PROVISION-2514 - fix broken layout for CDR Report Ladder Diagram

--- a/app/modules/huron/cdrLogs/cdrLadderDiagram/_cdr-diagram.scss
+++ b/app/modules/huron/cdrLogs/cdrLadderDiagram/_cdr-diagram.scss
@@ -13,6 +13,9 @@
 
   .icon {
     @include vr-spacing(mt, 0.2, 0.5px, true);
+    &.icon-download {
+      @include vr-spacing(mr, 0.5);
+    }
   }
 
   [id="filterDropdown"]{
